deploy/podinfo/podinfo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinfo
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    certmanager.k8s.io/acme-challenge-type: http01
spec: 
  rules:
  - host: podinfo.minikube.local
    http:
      paths:
      - path: /podinfo
        backend:
          serviceName: podinfo
          servicePort: 9898
